Fix page spacing

--- a/example-site/style.css
+++ b/example-site/style.css
@@ -61,20 +61,16 @@ body {
     color: #1F2937;
     display: flex;
     justify-content: center;
-}
-
-.section-4 {
-    display: flex;
-    background-color: #EBE7EB;
-    padding: 140px;
-    flex-direction: column;
+    padding-top: 25px;
 }
 
 .container-1 {
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    padding-top: 10px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .container-2 {
@@ -82,19 +78,29 @@ body {
     justify-content: space-between;
     gap: 20px;
     padding-top: 10px;
+    padding-bottom: 25px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .card-2 {
-    border: 1px solid #3882F6;
+    border: 2px solid #3882F6;
     box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
-    border-radius: 4px;
+    border-radius: 7px;
     text-align: center;
-    padding-top: 25px;
 }
 
 .card-1 {
     display: flex;
     text-align: center;
+    padding-bottom: 60px;
+}
+
+.section-4 {
+    display: flex;
+    background-color: #EBE7EB;
+    padding: 140px;
+    flex-direction: column;
 }
 
 .quote-text {
